cmake_minimum_required(VERSION 3.0)
project(reflection_intensity_map VERSION 1.1.0 LANGUAGES CXX)
# ビルドフラグの設定
set(CMAKE_CXX_FLAGS "-std=c++14 ${CMAKE_CXX_FLAGS}")
# インクルードパスの追加
if(WIN32)
  include_directories(C:/local/include)
  link_directories(C:/local/lib)
else()
  include_directories(/usr/local/include)
  link_directories(/usr/local/lib)
endif()
# ビルドに関する設定
find_package(Boost 1.65.0 REQUIRED COMPONENTS filesystem system)
set(EXECUTABLE1 "reflection_intensity_map")
set(EXECUTABLE2 "lawn_decision")
set(DEPENDENT_LIBS1 opencv_core;opencv_highgui;opencv_imgcodecs;opencv_imgproc;opencv_videoio ${Boost_LIBRARIES})
add_executable(${EXECUTABLE1} src/${EXECUTABLE1}.cpp)
add_executable(${EXECUTABLE2} src/${EXECUTABLE2}.cpp)
target_link_libraries(${EXECUTABLE1} ${DEPENDENT_LIBS1})
target_link_libraries(${EXECUTABLE2} ${DEPENDENT_LIBS1})
